--- a/data/build.gradle
+++ b/data/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation Dependencies.appCompat
 
     //DI
-    implementation Dependencies.koin
+    implementation Dependencies.koinAndroid
 
     testImplementation TestDependencies.jUnit
     androidTestImplementation TestDependencies.jUnitExtAndroid
