Fixed minor details to get products, added ProductsActivity.kt and ProductViewModel.kt

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,15 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -31,6 +40,7 @@ dependencies {
     implementation project(path: ':domain')
     implementation project(path: ':data')
     implementation project(path: ':remotedatasource')
+    implementation project(path: ':presentation')
 
     // Basics
     implementation Dependencies.kotlin
