--- a/data/src/main/AndroidManifest.xml
+++ b/data/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.haurbano.data">
-
-    /
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
