--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -27,8 +27,6 @@ android {
 preBuild.dependsOn ktlint
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation project(path: ':domain')
 
@@ -36,6 +34,8 @@ dependencies {
     implementation Dependencies.kotlin
     implementation Dependencies.coreKtx
     implementation Dependencies.appCompat
+    implementation Dependencies.recyclerView
+    implementation Dependencies.constrainLayout
 
     // Lifecycle
     implementation Dependencies.androidViewModel
