Added tests for domain module

--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -10,6 +10,11 @@ dependencies {
 
     // DI
     implementation Dependencies.koin
+
+    // Testing
+    implementation TestDependencies.jUnit
+    implementation TestDependencies.mockito3
+    implementation TestDependencies.coroutinesTesting
 }
 
 sourceCompatibility = "1.7"
