--- a/remotedatasource/build.gradle
+++ b/remotedatasource/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation Dependencies.coreKtx
     implementation Dependencies.appCompat
 
+    implementation Dependencies.coroutines
+
     //DI
     implementation Dependencies.koinAndroid
 
