--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -43,8 +43,8 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerVersion '1.4.10'
-        kotlinCompilerExtensionVersion '1.0.0-alpha01'
+        kotlinCompilerVersion '1.4.21'
+        kotlinCompilerExtensionVersion "1.0.0-alpha09"
     }
 }
 
