--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -4,13 +4,11 @@ apply plugin: 'kotlin-android-extensions'
 apply from: '../ktlint.gradle'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
 
     defaultConfig {
         minSdkVersion 26
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 30
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -43,8 +41,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerVersion '1.4.21'
-        kotlinCompilerExtensionVersion "1.0.0-alpha09"
+        kotlinCompilerExtensionVersion Versions.composeVersion
     }
 }
 
@@ -75,6 +72,7 @@ dependencies {
     implementation Dependencies.composeUITooling
     implementation Dependencies.composeFoundation
     implementation Dependencies.composeMaterial
+    implementation Dependencies.composeActivity
 
     // Testing
     testImplementation TestDependencies.jUnit
