--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -74,6 +74,8 @@ dependencies {
     implementation Dependencies.composeMaterial
     implementation Dependencies.composeActivity
     implementation Dependencies.coilCompose
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.3.0'
 
     // Testing
     testImplementation TestDependencies.jUnit
